--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,4 +1,5 @@
-- cache_editable_comment comment do
+- threaded = defined?(threaded) && threaded
+- cache_editable_comment(comment, threaded) do
   .comment{:id => "comment_#{comment.id}", :immutable_at => datetime_ms(comment.created_at + 15.minutes) }
     .info
       = thumb_avatar(comment.user)
@@ -19,7 +20,7 @@
               - if comment.can_destroy?(current_user)
                 = delete_comment_link(comment)
       .name
-        - if defined?(threaded)
+        - if threaded
           = link_to(comment.user.name, comment.user)
         -else
           = activity_title(comment)
@@ -27,7 +28,7 @@
           = comment_task_status(comment)
         - if comment.hours?
           %span.hours= friendly_hours_value(comment.hours)
-        = activity_project_link(comment.project) unless defined?(threaded) || comment.target.is_a?(Project)
+        = activity_project_link(comment.project) unless threaded || comment.target.is_a?(Project)
       .body.textilized
         ~ comment.body_html
       - if comment.uploads.any?
