Smaller avatar for threaded comments

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -37,3 +37,11 @@
       padding: 10px 10px 10px 10px
       display: block
       font-size: 0.8em
+    .comment
+      .info
+        width: 24px
+        margin-left: 10px
+        .micro_avatar
+          +rounded(3px)
+      .block
+        width: 510px
