--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -2,7 +2,7 @@
 - cache_editable_comment(comment, threaded) do
   .comment{:id => "comment_#{comment.id}", :immutable_at => datetime_ms(comment.created_at + 15.minutes) }
     .info
-      = thumb_avatar(comment.user)
+      = micro_avatar(comment.user)
     .block
       - unless rss?
         .actions_menu
