Full page GANTT chart for projects
Removing the mini gantt chart on tasklist#index and task#show

--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -47,9 +47,10 @@
       background: url(/images/feed.png) no-repeat left
   .calendars
     margin-top: 5px
+    padding-left: 3px
     a
       font-size: 13px
-      padding-left: 25px
+      padding-left: 22px
       background: url(/images/calendar_date_select/calendar.gif) no-repeat left
   .calendar_links
     font-size: 13px
@@ -62,6 +63,10 @@
       font-size: 13px
       padding-left: 25px
       background: url(/images/print.gif) no-repeat left
+  a.gantt_link
+    font-size: 13px
+    padding-left: 25px
+    background: url(/images/gantt.gif) no-repeat left
 
 
 @media print
