Moving banner actions to TaskList controller and helpers

--- a/app/views/shared/_gantt_banner_primer.haml
+++ b/app/views/shared/_gantt_banner_primer.haml
@@ -1,2 +1,2 @@
-#gantt_banner.banner_item{:style => "#{ 'display: none' unless current_banner?(:gantt)}"}
+#gantt_banner.banner_item{:style => "#{ 'display: none' unless current_gantt_view?(:gantt)}"}
   .primer=t('.title')
