--- a/app/views/shared/_upcoming_events.haml
+++ b/app/views/shared/_upcoming_events.haml
@@ -1,4 +1,4 @@
-#upcoming_events_banner.upcoming_events_banner.banner_item{:style => "#{ 'display: none' unless current_banner?(:calendar)}"}
+#upcoming_events_banner.upcoming_events_banner.banner_item{:style => "#{ 'display: none' unless current_gantt_view?(:calendar)}"}
   %table
     - for table_row in [(0..6),(7..13)]
       - unless table_row.all?{|i|events[i].nil?}
