--- a/app/views/shared/_upcoming_events_primer.haml
+++ b/app/views/shared/_upcoming_events_primer.haml
@@ -1,2 +1,2 @@
-#upcoming_events_banner.banner_item{:style => "#{'display: none' unless current_banner?(:calendar)}"}
+#upcoming_events_banner.banner_item{:style => "#{'display: none' unless current_gantt_view?(:calendar)}"}
   .primer=t('.title')
