GANTT chart across projects: Awesome

--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -30,6 +30,7 @@
     = filter_task_lists
 
     %h2= t('.other_views')
+    = gantt_view_link
     = instructions_for_calendars
     = print_task_lists_link
 
