--- a/app/views/shared/_project_navigation.html.erb
+++ b/app/views/shared/_project_navigation.html.erb
@@ -10,11 +10,17 @@ unless location_name? %w(welcome_users new_projects show_users edit_users new_av
           t.highlights_on :controller => :projects, :action => :index
           t.tab_index = 150
         end
-      
+
         add_tab do |t|
          t.named t('.all_task_lists')
          t.links_to task_lists_path
          t.highlights_on :controller => :task_lists, :action => :index
+        end
+
+        add_tab do |t|
+         t.named t('.gantt')
+         t.links_to gantt_view_task_lists_path
+         t.highlights_on :controller => :task_lists, :action => :gantt_view
         end
 
         if time_tracking_enabled?
