--- a/app/styles/_banner.sass
+++ b/app/styles/_banner.sass
@@ -32,16 +32,12 @@ div.upcoming_events_banner
     width: 100%
   th
     font-size: 11px
+    color: #bbb
     padding: 4px
       top: 10px
     border-bottom: 1px solid rgb(140, 140, 140)
   th.today
     font-weight: bold
-    -moz-border-radius:
-      topleft: 5px
-      topright: 5px
-    -webkit-border-top-left-radius: 5px
-    -webkit-border-top-right-radius: 5px
     border-bottom: dashed 1px rgb(0, 0, 0)
   td.today
     border: dashed 1px rgb(0, 0, 0)
@@ -51,11 +47,14 @@ div.upcoming_events_banner
     ul
       margin: 0px
       padding: 0px
+      min-height: 50px
       list-style-type: none
       a
         display: block
         padding: 3px 4px
         border-bottom: solid 1px rgb(255, 255, 255)
+    .task_status_new
+      color: white
   p.nada
     font-size: 12px
     padding-bottom: 0px
