--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -301,3 +301,7 @@ span.task_status, span.current_task_status
 .task_status_rejected
   background: #e97063
   color: white
+
+p.view_for_all
+  font-size: 12px
+  margin: 10px 0
