--- a/app/styles/print.sass
+++ b/app/styles/print.sass
@@ -24,7 +24,7 @@ div.wrapper
 div.content
   width: 100%
 
-.header, .global_navigation, .navigation, .project_navigation, .banner, .column, .footer
+.header, .global_navigation, .navigation, .project_navigation, .banner, .column, #footer
   display: none
 
 .comments_count
