--- a/app/styles/_gantt.sass
+++ b/app/styles/_gantt.sass
@@ -31,7 +31,7 @@
   .row
     position: relative
     display: block
-    margin: 1px 0
+    margin: 5px 0
     font-size: 12px
     height: 19px
   .task_list
@@ -39,13 +39,30 @@
     font-size: 11px
     position: absolute
     background: rgb(240,240,240)
-    border: solid 1px rgb(200,200,200)
+    +gradient-bottom(#ccc)
+    border: solid 1px rgb(180,180,180)
     white-space: nowrap
     overflow: hidden
     padding: 3px 0px
     text-indent: .4em
-    -moz-border-radius: 4px
-    -webkit-border-radius: 4px
+    text-align: center
+    +rounded(4px)
+    &.undefined_start
+      +rounded(0px)
+      border-left: none
+      text-align: right
+      -moz-border-radius-topright: 4px
+      -moz-border-radius-bottomright: 4px
+      -webkit-border-top-right-radius: 4px
+      -webkit-border-bottom-right-radius: 4px
+    &.undefined_end
+      +rounded(0px)
+      border-right: none
+      text-align: left
+      -moz-border-radius-topleft: 4px
+      -moz-border-radius-bottomleft: 4px
+      -webkit-border-top-left-radius: 4px
+      -webkit-border-bottom-left-radius: 4px
     a
       display: block
     a:hover
