--- a/app/views/shared/_event.haml
+++ b/app/views/shared/_event.haml
@@ -1,3 +1,9 @@
 %ul
   - for task in Array(events)
-    %li= event_task_link(task)
+    %li.has_panel
+      = event_task_link(task)
+      .panel
+        %h2= task
+        %h3
+          Project:
+          = link_to task.project, project_path(task.task_list.project)
