--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -23,7 +23,7 @@
 - else
   %h2= t('.tasks_for_all_projects')
 
-  #tasks_for_all_projects{}
+  #tasks_for_all_projects
     = tasks_for_all_projects(@tasks)
 
   - content_for :column do
