--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -12,16 +12,16 @@
     .taskName{ :class => "task_item_#{task.status_name}"}
       %span.status
         = localized_status_name(task)
-      %span.project
-        = link_to task.project, project_path(task.project)
-        &rarr;
-      %span.task_list
-        = link_to task.task_list, project_task_list_path(task.project, task.task_list)
-        &rarr;
       = link_to task.name, project_task_list_task_path(project,task_list,task), :class => 'name'
       - unless (task.due_on.nil? && task.unassigned?) || task.closed?
         %span.assigned
           = due_on(task) if task.due_on
           = "-" unless task.assigned.nil? || task.due_on.nil?
           = link_to task.assigned.short_name, user_path(task.assigned.user) if task.assigned
+      .task_extended
+        %span.project
+          = link_to task.project, project_path(task.project)
+          &rarr;
+        %span.task_list
+          = link_to task.task_list, project_task_list_path(task.project, task.task_list)
     .clear
