Less aggressive overdue items styling

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -141,6 +141,7 @@ div.column
       width: 30px
       padding:
         left: 20px
+        top: 2px
       span
         display: block
         width: 23px
@@ -168,19 +169,12 @@ div.column
       .task_extended, span.status, span.project, span.task_list
         display: none
   .task.overdue
-    background: rgb(255,240,240)
     .taskName
-      a
+      a.name
         color: rgb(200,0,0)
         font-weight: bold
-      span
-        background: rgb(255,255,255)
-        border: solid 1px rgb(240,200,200)
+      span.assigned
         color: rgb(200,0,0)
-        font-weight: bold
-        a
-          color: rgb(200,0,0)
-          font-weight: normal
   .task.mine
     background: rgb(255,255,210)
     .taskName
