Text styling tip now goes on a facebox

--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -3,7 +3,7 @@ div.column
     color: red
 
   span.task_status
-    :margin
+    margin:
       right: 5px
       bottom: 3px
     padding: 2px 5px
@@ -33,7 +33,7 @@ div.column
     padding-right: 10px
     input
       width: 100%
-      :border
+      border:
         top: solid 1px rgb(90,90,90)
         left: solid 1px rgb(150,150,150)
         bottom: solid 1px rgb(150,150,150)
