--- a/app/views/search/results.haml
+++ b/app/views/search/results.haml
@@ -1,8 +1,10 @@
 .results
-  %p= "Showing #{@comments.size} results"
+  %p= "#{@comments.total_entries} results found for \"#{@search}\""
 
   - form_tag search_path do
     = text_field_tag :search, params[:search]
     = submit_tag "Search again"
 
 = render :partial => 'comments/comment', :collection => @comments
+
+= will_paginate @comments, :params => {:search => @search}
