Highlight search terms. Also improve case where no search has been entered

--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -23,3 +23,7 @@
         font-size: 20px
         width: 450px
         margin-right: 20px
+
+#results_set
+  span.highlight
+    background-color: yellow
