Commenting from threads, with smaller textarea, smaller attachment icons.

--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -15,9 +15,11 @@
       %span.project
         = t('common.in_project')
         = link_to thread.project, thread.project
-  .comments
+  .comments{ :id => "thread_#{thread.class.to_s}_#{thread.id}_comments" }
     - if thread.comments_count > 2
       %span.more_comments
         = link_to t('activities.thread.more_comments', :count => thread.comments_count - 2), thread_link
     - thread.comments.all(:order => "id DESC", :limit => 2).reverse.each do |comment|
       = render :partial => 'comments/comment', :locals => { :comment => comment, :threaded => true }
+  .reply
+    = new_comment_form(thread.project, thread.project.comments.new, :target => thread, :thread => true) unless thread.is_a?(Task) && thread.closed?
