--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -2,6 +2,7 @@
   +rounded(3px)
   border-bottom: 4px solid #f6f6f6
   margin-bottom: 20px
+  padding-bottom: 20px
   .title
     display: block
     padding: 15px 0
@@ -28,7 +29,7 @@
         top: 1px solid #dfe0e2
   .comments
     border-left: 4px solid #ccc
-    margin: 10px 0 20px 70px
+    margin: 1px 0 0 70px
     background-color: #f6f6f6
     .block
       width: 475px
@@ -45,3 +46,13 @@
           +rounded(3px)
       .block
         width: 510px
+  form#new_comment
+    border-left: 4px solid #ccc
+    background-color: #f6f6f6
+    margin: 0 0 0 70px
+    padding: 5px 0 5px 10px
+    .body
+      textarea
+        width: 500px
+    .micro_avatar
+      margin-top: 7px
