--- a/app/styles/_tooltips.sass
+++ b/app/styles/_tooltips.sass
@@ -12,6 +12,7 @@
     height: 18px
     font-weight: bold
     text-shadow: black 0px 1px 1px
+    z-index: 10000
   &:hover
     .tooltip
       display: block
