Add tooltips to the attach hours and upload icons

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -48,13 +48,13 @@ form#new_comment
     margin-right: 10px
     display: block
     width: 16px
-    height: 16px
+    height: 26px
     span
       display: none
   .attach_file
-    background: url('/images/icons/attach.png') no-repeat right
+    background: url('/images/icons/attach.png') no-repeat center center
   .attach_time
-    background: url('/images/icons/time_add.png') no-repeat right
+    background: url('/images/icons/time_add.png') no-repeat center center
   .hours
     padding-left: 1px
     padding-right: 10px
@@ -259,3 +259,6 @@ form.convert_comment
   a.mention
     &:hover
       color: #259BAD
+.tooltip.attach
+  margin-top: 30px
+  margin-left: 10px
