--- a/app/views/comments/_hours.haml
+++ b/app/views/comments/_hours.haml
@@ -1,4 +1,7 @@
-= link_to_function content_tag(:span,t('.add_hours')), "this.hide();this.next('.hours').show();", :style => (f.object.hours.nil? ? '' : 'display: none;'), :class => 'attach_button attach_time', :id => 'comment_hours_link'
-.hours.text_field{:style => (f.object.hours.nil? ? 'display: none;' : '')}
-  = f.label :human_hours, t('.hours') + ' ' + time_tracking_doc
-  = f.text_field :human_hours, :autofocus => true
+.has_tooltip
+  .tooltip.attach
+    = t('comments.hours.tooltip')
+  = link_to_function content_tag(:span,t('.add_hours')), "this.hide();this.next('.hours').show();", :style => (f.object.hours.nil? ? '' : 'display: none;'), :class => 'attach_button attach_time', :id => 'comment_hours_link'
+  .hours.text_field{:style => (f.object.hours.nil? ? 'display: none;' : '')}
+    = f.label :human_hours, t('.hours') + ' ' + time_tracking_doc
+    = f.text_field :human_hours, :autofocus => true
