--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -21,5 +21,5 @@
         = link_to t('activities.thread.more_comments', :count => thread.comments_count - 2), thread_link
     - thread.comments.last_two.all.reverse.each do |comment|
       = render :partial => 'comments/comment', :locals => { :comment => comment, :threaded => true }
-  .reply
+  .reply{ :id => "thread_#{thread.class.to_s}_#{thread.id}_reply" }
     = new_comment_form(thread.project, thread.project.comments.new, :target => thread, :thread => true) unless thread.is_a?(Task) && thread.closed?
