Help to create tasks or comments by email

--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -26,3 +26,4 @@
   = instructions_for_feeds
   = instructions_for_calendars
   = #print_project_link(@current_project)
+  = instructions_for_email(@current_project)
