--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -24,3 +24,4 @@
 = gantt_view_link(@current_project)
 = instructions_for_calendars
 = print_task_lists_link(project)
+= instructions_for_email(project)
