--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -63,11 +63,35 @@
       font-size: 13px
       padding-left: 25px
       background: url(/images/print.gif) no-repeat left
+  .email
+    margin-top: 5px
+    a
+      font-size: 13px
+      padding-left: 25px
+      background: url(/images/email.gif) no-repeat left
+    span
+      display: none
+      margin: 5px 0 0 25px
+      padding: 10px 25px 10px 10px
+      color: #505050
+      -moz-border-radius: 4px
+      border: 1px solid #C8C8C8
+      background-color: #F0F0F0
+      word-wrap: break-word
+      a
+        background-image: none
+        padding-left: 0
+      .closeThis
+        background: url(/images/close_help.png) no-repeat left
+        text-indent: -9999px
+        width: 15px
+        float: right
+        margin-top: -5px
+        margin-right: -20px
   a.gantt_link
     font-size: 13px
     padding-left: 25px
     background: url(/images/gantt.gif) no-repeat left
-
 
 @media print
   .index_projects
