--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -10,7 +10,9 @@
 - else
   %p= t('.existing_user', :login_url => login_path, :forgot_url => forgot_password_path)
 
-  - form_for @user do |form|
+  - secure_url = Teambox.config.secure_logins ? users_url(:protocol => 'https') : nil
+
+  - form_for @user, :url => secure_url do |form|
     = render form
     - if RAILS_ENV == "development"
       %p You are running in development mode. No email confirmation will be required.
