Fix edit comment forms in threads

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -149,6 +149,12 @@ form.edit_comment
   p.error
     color: red
     font-weight: bold
+    
+div.thread
+  form.edit_comment
+    .body
+      textarea
+        width: 538px
 
 form.reopen,form.convert_comment
   background: rgb(255, 255, 200)
