Added simple conversations: status updates now become a simple conversation

--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -1,30 +1,34 @@
 - thread = activity.thread
 - thread_id = "#{thread.class.to_s}_#{thread.id}"
 - thread_link = thread.is_a?(Task) ? [thread.task_list.project, thread.task_list, thread] : [thread.project, thread]
+- comments = thread.comments
 .thread{ :id => "thread_#{thread_id}" }
-  .title
-    .info
-      = thumb_avatar(thread.user)
-    %div.date
-      = posted_date(thread.created_at)
-    %span.starter
-      = link_to(thread.user.name, thread.user)
-      = t("activities.thread.created.#{thread.class.to_s.downcase}")
-    %strong
-      = link_to thread, thread_link
-    - unless @current_project
-      %span.project
-        = t('common.in_project')
-        = link_to thread.project, thread.project
+  -if thread.is_a?(Conversation) and thread.simple and comments.size > 0
+    = render :partial => 'comments/comment', :locals => { :comment => comments.pop, :simpleconv => true }
+  - else
+    .title
+      .info
+        = thumb_avatar(thread.user)
+      %div.date
+        = posted_date(thread.created_at)
+      %span.starter
+        = link_to(thread.user.name, thread.user)
+        = t("activities.thread.created.#{thread.class.to_s.downcase}")
+      %strong
+        = link_to thread, thread_link
+      - unless @current_project
+        %span.project
+          = t('common.in_project')
+          = link_to thread.project, thread.project
   .comments{ :id => "thread_#{thread_id}_comments" }
-    - if thread.comments_count > 2
+    - if comments.size > 2
       %span.more_comments
-        = link_to_remote t('activities.thread.more_comments', :count => thread.comments_count - 2),
+        = link_to_remote t('activities.thread.more_comments', :count => comments.size - 2),
           :url => show_thread_path(thread, :thread_type => thread.class.to_s),
           :method => :get,
           :loading => full_thread_loading(thread_id)
         = loading_image("#{thread_id}_more_comments")
-    - thread.comments.last_two.all.reverse.each do |comment|
+    - comments[0..1].reverse.each do |comment|
       = render :partial => 'comments/comment', :locals => { :comment => comment, :threaded => true }
   .reply{ :id => "thread_#{thread_id}_reply" }
     = new_comment_form(thread.project, thread.project.comments.new, :target => thread, :thread => true) unless thread.is_a?(Task) && thread.closed?
