--- a/app/views/users/text_styles.erb
+++ b/app/views/users/text_styles.erb
@@ -1,11 +1,11 @@
 <style type="text/css">
-  h1, h2, h3, h4, ul, ol { margin: 0; padding: 0; }
-  body, th, td, pre { font-size: 12px; font-family: Helvetica; }
-  pre { font-family: "Monaco", "Courier New", "Terminal", monospace; margin: 0; }
-  th { font-size: 14px; font-weight: bold; padding-bottom: 20px; }
-  td { padding-right: 50px; padding-bottom: 10px; }
-  ul { padding-left: 10px; }
-  ol { padding-left: 0px; }
+  #facebox h1, #facebox h2, #facebox h3, #facebox h4, #facebox ul, #facebox ol { margin: 0; padding: 0; }
+  body #facebox , #facebox th, #facebox td, #facebox pre { font-size: 12px; font-family: Helvetica; }
+  #facebox pre { font-family: "Monaco", "Courier New", "Terminal", monospace; margin: 0; }
+  #facebox th { font-size: 14px; font-weight: bold; padding-bottom: 20px; }
+  #facebox td { padding-right: 50px; padding-bottom: 10px; }
+  #facebox ul { padding-left: 10px; }
+  #facebox ol { padding-left: 0px; }
 </style>
 
 <table class="textile_doc" style="width: 500px"> 
