Translation of untranslated strings

--- a/app/views/cards/_address.haml
+++ b/app/views/cards/_address.haml
@@ -14,4 +14,4 @@
     =f.label :zip
     =f.text_field :zip
   .country  
-    =f.localized_country_select :country, [], :include_blank => 'Please choose...'
+    =f.localized_country_select :country, [], :include_blank => t('support.select.prompt')
