Don't fail miserably if a Task doesn't have a user_id

--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -8,11 +8,11 @@
   - else
     .title
       .info
-        = thumb_avatar(thread.user)
+        = thumb_avatar(thread.user) if thread.user
       %div.date
         = posted_date(thread.created_at)
       %span.starter
-        = link_to(thread.user.name, thread.user)
+        = link_to(thread.user.name, thread.user) if thread.user
         = t("activities.thread.created.#{thread.class.to_s.downcase}")
       %strong
         = link_to thread, thread_link
