--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -188,20 +188,10 @@ form.convert_comment
     border: none
 
 .comment
-  padding: 15px 0
+  padding: 15px 0 5px
   border:
     top: 1px solid white
     bottom: 1px solid white
-  &:hover
-    border:
-      top: 1px solid #dfe0e2
-      bottom: 1px solid #dfe0e2
-    background-color: #f6f6f6
-    p.actions
-      visibility: visible
-    .block
-      .date
-        color: rgb(0, 0, 0)
   p.actions
     visibility: hidden
     position: relative
