Activities now have micro avatars and white background

--- a/app/styles/_activities.sass
+++ b/app/styles/_activities.sass
@@ -1,9 +1,6 @@
 .activity
-  padding: .3em .6em
-  margin: .5em 0px
+  margin: 10px
   font-size: 12px
-  background-color: $highlight
-  border: 1px solid $highlight - 20
   +rounded(3px)
   +clearing
   p
@@ -13,7 +10,9 @@
     float: right
     margin-top: 2px
     font-size: 10px
-    color: #c7b89f
+    color: #9DA3A7
+  .micro_avatar
+    +rounded(3px)
   a
     font-weight: bold
   img
@@ -23,6 +22,3 @@
   .clear
     margin-left: 26px
     padding-bottom: 1px
-  &:hover
-    .date
-      color: rgb(0, 0, 0)
