i18n for textile docs inside facebox

--- a/app/views/users/text_styles.erb
+++ b/app/views/users/text_styles.erb
@@ -8,62 +8,53 @@
   #facebox ol { padding-left: 0px; }
 </style>
 
-<table class="textile_doc" style="width: 500px"> 
+<table class="textile_doc" style="width: 550px"> 
   <tr> 
-    <th>Enter this</th>
-    <th>To see this</th>
+    <th><%= t('.enter_this.title') %></th>
+    <th><%= t('.to_see_this.title') %></th>
   </tr> 
   <tr> 
-    <td><pre>**bold** text</pre></td> 
-    <td><strong style="font-weight: bold">bold</strong> text</td> 
+    <td><pre><%= t('.enter_this.bold_text') %></pre></td>
+    <td><%= t('.to_see_this.bold_text') %></td> 
   </tr> 
   <tr> 
-    <td><pre>*italics* text</pre></td> 
-    <td><i>italics</i> text</td> 
+    <td><pre><%= t('.enter_this.italic_text') %></pre></td>
+    <td><%= t('.to_see_this.italic_text') %></td> 
   </tr> 
   <tr> 
-    <td><pre>Header
-======</pre></td> 
+    <td><pre><%= t('.enter_this.header') %></pre></td>
     <td> 
-      <h3 style="font-size:18px">Header</h3> 
+      <%= t('.to_see_this.header') %>
     </td> 
   </tr> 
   <tr> 
-    <td><pre>Smaller header
----------</pre></td> 
-    <td><h4 style="font-size:14px">Smaller header</h4></td> 
+    <td><pre><%= t('.enter_this.smaller_header') %></pre></td>
+    <td><%= t('.to_see_this.smaller_header') %></td> 
   </tr> 
   <tr> 
-    <td><pre>[A link](http://teambox.com)</pre></td> 
-    <td><a href="http://www.teambox.com">Link something</a></td> 
+    <td><pre><%= t('.enter_this.link') %></pre></td>
+    <td><%= t('.to_see_this.link') %></td> 
   </tr> 
   <tr> 
-    <td><pre>![alt text](http://w3.org/img.jpg)</pre></td> 
-    <td><img src="http://www.w3.org/Icons/valid-html401"></td> 
+    <td><pre><%= t('.enter_this.image') %></pre></td>
+    <td><%= t('.to_see_this.image') %></td> 
   </tr> 
   <tr> 
-    <td><pre>* unordered list
-* leave empty lines around
-    </pre></td> 
+    <td><pre><%= t('.enter_this.unordered_list') %></pre></td>
     <td> 
-      <ul> 
-      <li>unordered list</li> 
-      <li>leave empty lines around</li> 
+      <ul style="padding-left:10px">
+        <%= t('.to_see_this.unordered_list') %>
       </ul> 
     </td> 
   </tr> 
   <tr> 
+    <td><pre><%= t('.enter_this.ordered_list') %></pre></td>
     <td> 
-    <pre>1. ordered list
-2. leave empty lines!
-    </pre></td> 
-    <td> 
-    <ol style="padding-left:20px"> 
-    <li>ordered list</li> 
-    <li>leave empty lines!</li> 
-    </ol> 
+      <ol style="padding-left:20px">
+        <%= t('.to_see_this.ordered_list') %>
+      </ol> 
     </td> 
   </tr> 
 </table>
 
-<p>Paste your code indented (4 spaces or tabs) to paste it as a block of code.</p>
+<p><%= t('.block_of_code') %></p>
