Correcting reopen task font size

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -172,6 +172,7 @@ form.reopen,form.convert_comment
   .reopen_body
     margin-bottom: 5px
     textarea
+      font-size: 12px
       width: 572px
       margin-bottom: 0px
 
